Home Work #6 sort item - done

--- a/Домашняя работа №6/index.html
+++ b/Домашняя работа №6/index.html
@@ -13,6 +13,7 @@
             <div class="card-header">
                 Добавить новый товар
             </div>
+            <div class="alert alert-success">Item added success!</div>
             <div class="card-body">
                 <form name="addItems">
                     <div class="form-group">
@@ -27,7 +28,7 @@
                 </form>
             </div>
         </div>
-        <button class="btn btn-warning btn-block sort mt-4 mb-4">Сортировка</button>
+        <button class="btn btn-warning btn-block sort mt-4 mb-4" onclick="sort();" >Сортировка</button>
         <table class="table">
             <thead>
                 <tr>
