Home Work #6 sort item - done

--- a/Домашняя работа №6/index.html
+++ b/Домашняя работа №6/index.html
@@ -14,6 +14,7 @@
                 Добавить новый товар
             </div>
             <div class="alert alert-success">Item added success!</div>
+            <div class="alert alert-danger">Item has been removed success!</div>
             <div class="card-body">
                 <form name="addItems">
                     <div class="form-group">
@@ -40,6 +41,7 @@
 
             </tbody>
         </table>
+        <div class="alert alert-info">Empty list. </div>
     </div>
 <script src="plugin.js"></script>
 </body>
