--- a/Домашняя работа №6/index.html
+++ b/Домашняя работа №6/index.html
@@ -13,8 +13,7 @@
             <div class="card-header">
                 Добавить новый товар
             </div>
-            <div class="alert alert-success">Item added success!</div>
-            <div class="alert alert-danger">Item has been removed success!</div>
+            <div class="alert alert_information"></div>
             <div class="card-body">
                 <form name="addItems">
                     <div class="form-group">
@@ -41,7 +40,6 @@
 
             </tbody>
         </table>
-        <div class="alert alert-info">Empty list. </div>
     </div>
 <script src="plugin.js"></script>
 </body>
