--- a/Домашняя работа №6/index.html
+++ b/Домашняя работа №6/index.html
@@ -36,9 +36,7 @@
                     <th>Цена</th>
                 </tr>
             </thead>
-            <tbody>
-
-            </tbody>
+            <tbody class="content_item"></tbody>
         </table>
     </div>
 <script src="plugin.js"></script>
