--- a/Домашняя работа №6/index.html
+++ b/Домашняя работа №6/index.html
@@ -38,6 +38,15 @@
             </thead>
             <tbody class="content_item"></tbody>
         </table>
+        <form action="">
+            <div class="result">
+                <label for="itemName">Цена от:</label>
+                <input type="number" min="0" class="form-control" id="minPrice">
+                <label for="itemName">Цена до:</label>
+                <input type="number" min="0" class="form-control" id="maxPrice">
+                <button type="button" class="btn btn-primary btn-block mt-4 mb-4" onclick="filterCollection()" >Отсортировать</button>
+            </div>
+        </form>
     </div>
 <script src="plugin.js"></script>
 </body>
