--- a/Домашняя работа №6/index.html
+++ b/Домашняя работа №6/index.html
@@ -38,7 +38,7 @@
             </thead>
             <tbody class="content_item"></tbody>
         </table>
-        <form action="">
+        <form>
             <div class="result">
                 <label for="itemName">Цена от:</label>
                 <input type="number" min="0" class="form-control" id="minPrice">
