Home work 8 timer

--- a/Домашняя работа №8/index.html
+++ b/Домашняя работа №8/index.html
@@ -15,7 +15,8 @@
       <button data-time="1200" class="timer__button">Snack 20</button>
       <button data-time="3600" class="timer__button">Lunch Break</button>
       <form name="customForm" id="custom">
-        <input type="text" name="minutes" placeholder="Enter Minutes">
+        <input type="number" name="minutes" placeholder="Enter Minutes" id="minutes">
+        <input type="submit" value="Задать время" onclick="setTime(event)">
       </form>
     </div>
     <div class="display">
