Home work 8 timer

--- a/Домашняя работа №8/index.html
+++ b/Домашняя работа №8/index.html
@@ -16,7 +16,7 @@
       <button data-time="3600" class="timer__button">Lunch Break</button>
       <form name="customForm" id="custom">
         <input type="number" name="minutes" placeholder="Enter Minutes" id="minutes">
-        <input type="submit" value="Задать время" onclick="setTime(event)">
+        <input type="submit" value="Enter" class="pointer"  onclick="setTime(event)">
       </form>
     </div>
     <div class="display">
