--- a/Домашняя работа №8/index.html
+++ b/Домашняя работа №8/index.html
@@ -22,7 +22,7 @@
     <div class="display">
       <h1 class="display__time-left"></h1>
       <p class="display__end-time"></p>
-      <input type="submit" value="Enter" class="stop_button" onclick="stopTimer();">
+      <input type="submit" value="Stop" class="stop_button" onclick="stopTimer();">
     </div>
   </div>
 
