Home work 8 timer

--- a/Домашняя работа №8/index.html
+++ b/Домашняя работа №8/index.html
@@ -22,10 +22,9 @@
     <div class="display">
       <h1 class="display__time-left"></h1>
       <p class="display__end-time"></p>
-      <input type="submit" value="Stop" class="stop_button">
+      <input type="submit" value="Stop" class="stop_button" onclick="stopTimer();">
     </div>
   </div>
-
   <script src="js/plugin.js"></script>
 </body>
 </html>
