--- a/Домашняя работа №12/index.html
+++ b/Домашняя работа №12/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="https://bootswatch.com/4/litera/bootstrap.min.css">
-    <link rel="stylesheet" href="stylesheet/style.css">
+  <link rel="stylesheet" href="stylesheet/style.css">
   <title>GitHub Finder</title>
 </head>
 <body>
@@ -21,7 +21,7 @@
       <input type="text" id="searchUser" class="form-control" placeholder="GitHub Username...">
     </div>
     <br>
-    <div id="profile"></div>
+    <div id="profile" class="card"></div>
   </div>
 
   <footer class="mt-5 p-3 text-center bg-light">
@@ -34,7 +34,6 @@
   <script src="js/UI.js"></script>
   <script src="js/GitHub.js"></script>
   <script src="js/app.js"></script>
-
 
 </body>
 </html>
