--- a/Домашняя работа №15/index.html
+++ b/Домашняя работа №15/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
@@ -7,47 +8,48 @@
     <link href="https://use.fontawesome.com/releases/v5.0.6/css/all.css" rel="stylesheet">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 </head>
+
 <body>
-    <div class="container">
-        <div class="card mt-4">
-            <div class="card-header">
-                Добавить новый товар
+
+    <section class="tasks-wrap mt-5">
+        <div class="container">
+            <div class="card mb-3">
+                <div class="card-header">
+                    Add todo
+                </div>
+                <!--<div class="alert alert-success">Task added success!</div>-->
+                <!--<div class="alert alert-danger">Task has been removed success!</div>-->
+                <!--<div class="alert alert-danger alert-danger_clearlist">All task has been removed success!</div>-->
+                <div class="card-body">
+                    <form name="addTodoItem">
+                        <div class="form-group">
+                            <label for="todoText">Text</label>
+                            <input type="text" class="form-control" id="todoText">
+                            <div class="invalid-feedback">
+                                Please enter some text
+                            </div>
+                        </div>
+                        <button type="submit" class="btn btn-primary">Add</button>
+                    </form>
+                </div>
             </div>
-            <div class="alert alert_information"></div>
-            <div class="card-body">
-                <form name="addItems">
-                    <div class="form-group">
-                        <label for="itemName">Название товара</label>
-                        <input type="text" class="form-control" id="itemName">
-                    </div>
-                    <div class="form-group">
-                        <label for="itemPrice">Цена</label>
-                        <input type="number" class="form-control" id="itemPrice">
-                    </div>
-                    <button type="submit" class="btn btn-primary btn-block">Добавить товар</button>
-                </form>
+            <div class="card mb-3">
+                <div class="card-header">
+                    Task list
+                </div>
+                <div class="card-body">
+                    <ul class="list-group">
+                        <!--<li class="list-group-item">Cras justo odio</li>-->
+
+                    </ul>
+                    <!--<div class="alert alert-info">Empty list. </div>-->
+                </div>
             </div>
+            <button class="btn btn-primary clear-btn" onclick="clearList();">Clear list</button>
         </div>
-        <button class="btn btn-warning btn-block sort mt-4 mb-4" onclick="sort();" >Сортировка</button>
-        <table class="table">
-            <thead>
-                <tr>
-                    <th>Название</th>
-                    <th>Цена</th>
-                </tr>
-            </thead>
-            <tbody class="content_item"></tbody>
-        </table>
-        <form>
-            <div class="result">
-                <label for="itemName">Цена от:</label>
-                <input type="number" min="0" class="form-control" id="minPrice">
-                <label for="itemName">Цена до:</label>
-                <input type="number" min="0" class="form-control" id="maxPrice">
-                <button type="button" class="btn btn-primary btn-block mt-4 mb-4" onclick="filterCollection()" >Отсортировать</button>
-            </div>
-        </form>
-    </div>
-<script src="app.js"></script>
+    </section>
+
+    <script src="app.js"></script>
 </body>
+
 </html>
