home work module

--- a/Домашняя работа №15/index.html
+++ b/Домашняя работа №15/index.html
@@ -48,8 +48,8 @@
             <button class="btn btn-primary clear-btn" onclick="clearList();">Clear list</button>
         </div>
     </section>
-
-    <script src="app.js"></script>
+    <script src="js/observe.js"></script>
+    <script src="js/app.js"></script>
 </body>
 
 </html>
