--- a/Домашняя работа №15/index.html
+++ b/Домашняя работа №15/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
     <link href="https://use.fontawesome.com/releases/v5.0.6/css/all.css" rel="stylesheet">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 </head>
@@ -48,6 +48,8 @@
             <button class="btn btn-primary clear-btn" onclick="clearList();">Clear list</button>
         </div>
     </section>
+    <script src="js/idModule.js"></script>
+    <script src="js/taskModule.js"></script>
     <script src="js/observe.js"></script>
     <script src="js/app.js"></script>
 </body>
