home work module

--- a/Домашняя работа №15/index.html
+++ b/Домашняя работа №15/index.html
@@ -17,10 +17,7 @@
                 <div class="card-header">
                     Add todo
                 </div>
-                <!--<div class="alert alert-success">Task added success!</div>-->
-                <!--<div class="alert alert-danger">Task has been removed success!</div>-->
-                <!--<div class="alert alert-danger alert-danger_clearlist">All task has been removed success!</div>-->
-                <div class="card-body">
+               <div class="card-body">
                     <form name="addTodoItem">
                         <div class="form-group">
                             <label for="todoText">Text</label>
@@ -39,13 +36,11 @@
                 </div>
                 <div class="card-body">
                     <ul class="list-group">
-                        <!--<li class="list-group-item">Cras justo odio</li>-->
 
                     </ul>
-                    <!--<div class="alert alert-info">Empty list. </div>-->
                 </div>
             </div>
-            <button class="btn btn-primary clear-btn" onclick="clearList();">Clear list</button>
+            <button class="btn btn-primary clear-btn">Clear list</button>
         </div>
     </section>
     <script src="js/idModule.js"></script>
