--- a/Домашняя работа №15/index.html
+++ b/Домашняя работа №15/index.html
@@ -10,7 +10,6 @@
 </head>
 
 <body>
-
     <section class="tasks-wrap mt-5">
         <div class="container">
             <div class="card mb-3">
@@ -35,6 +34,7 @@
                     Task list
                 </div>
                 <div class="card-body">
+                    <div class="alert alert-info empty-alert">Empty list</div>
                     <ul class="list-group">
 
                     </ul>
@@ -45,7 +45,10 @@
     </section>
     <script src="js/idModule.js"></script>
     <script src="js/taskModule.js"></script>
+    <script src="js/localStorageModule.js"></script>
+    <script src="js/notificationModule.js"></script>
     <script src="js/observe.js"></script>
+    <script src="js/uiModule.js"></script>
     <script src="js/app.js"></script>
 </body>
 
