--- a/firebase/home.html
+++ b/firebase/home.html
@@ -11,9 +11,69 @@
 <!-- Header start -->
 <nav class="navbar navbar-dark bg-primary">
     <a class="navbar-brand" href="#">Portfolio</a>
+    <span class="navbar-text user-name ml-auto mr-3"></span>
     <button class="btn btn-danger sign-out">Sign out</button>
 </nav>
 <!-- Header end -->
+<main class="mt-5">
+    <section class="add-new-project mb-5">
+        <div class="container">
+            <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#addProject">Add new project</button>
+        </div>
+    </section>
+    <section class="projects-list-wrapper">
+        <div class="container">
+            <div class="row">
+
+            </div>
+        </div>
+    </section>
+</main>
+
+<!-- Modal Add project -->
+<!-- Modal -->
+<div class="modal fade" id="addProject" tabindex="-1" role="dialog" aria-labelledby="addProject" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabel">Add new project</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <form name="add-project-form">
+                    <div class="form-group">
+                        <label for="projectName">Project name</label>
+                        <input type="text" class="form-control" name="projectName" id="projectName">
+                    </div>
+                    <div class="form-group">
+                        <label for="projectDescription">Project description</label>
+                        <input type="text" class="form-control" name="projectDescription" id="projectDescription">
+                    </div>
+                    <div class="form-group">
+                        <label for="projectPrice">Project price</label>
+                        <input type="text" class="form-control" name="projectPrice" id="projectPrice">
+                    </div>
+                    <div class="form-group">
+                        <label for="projectAmount">Project amount</label>
+                        <input type="text" class="form-control" name="projectAmount" id="projectAmount">
+                    </div>
+                    <div class="form-group">
+                        <label for="projectImg">Project img</label>
+                        <input type="text" class="form-control" name="projectImg" id="projectImg">
+                    </div>
+                    <button type="submit" class="btn btn-primary btn-block">Add project</button>
+                </form>
+            </div>
+        </div>
+    </div>
+</div>
+
+<!-- jQuery bootstrap -->
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js" integrity="sha384-cs/chFZiN24E4KMATLdqdvsezGxaGsi4hLGOzlXwp5UZB1LY//20VyM2taTB4QvJ" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js" integrity="sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm" crossorigin="anonymous"></script>
 
 <script src="https://www.gstatic.com/firebasejs/4.12.1/firebase.js"></script>
 <script src="https://www.gstatic.com/firebasejs/4.12.0/firebase-firestore.js"></script>
@@ -21,6 +81,7 @@
 <script src="js/services/auth.js"></script>
 <script src="js/services/projects.js"></script>
 <script src="js/services/user.js"></script>
+<script src="js/homeUi.js"></script>
 <script src="js/home.js"></script>
 </body>
 </html>
